docs/tests/nameres/control_flow/valid/DoWhile.src
// Valid 

fn void main() {
    do {
        let int i = 0;
    } while (true);
}