docs/tests/nameres/control_flow/invalid/WhileNoExpr.src
// Invalid 

fn void main() {
    while () {
        
    }
}